@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.3.1 (pending)
 ==========================
 
+- Renamed BlockEval to fix symbol conflict with GUI
 - Restored pothos-all metapackage for convenience
 - Added pothos (runtime) to libpothos-dev Depends
 - Make spuce submodule optional as a dependency
